<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ForgotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_35dp"
            android:layout_height="@dimen/_35dp"
            android:contentDescription="@string/login"
            android:src="@drawable/img_arrow_left" />

        <ImageView
            android:layout_width="@dimen/_220dp"
            android:layout_height="@dimen/_220dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login"
            android:src="@drawable/img_signup" />

        <com.royalit.mfd.customviews.CustomTextView
            style="@style/style_textview"
            android:text="@string/forgotpassword"
            android:textColor="@color/color_skip"
            android:textSize="@dimen/_18sp" />

        <com.royalit.mfd.customviews.CustomTextView
            style="@style/style_textview"
            android:text="@string/ceate_account_sothat"
            android:textSize="@dimen/_16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_phone"
            style="@style/style_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/style_button"
            android:layout_gravity="center"
            android:onClick="send"
            android:text="@string/send" />

    </LinearLayout>

</ScrollView>