<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_16dp"
            android:paddingRight="@dimen/_16dp">

            <LinearLayout
                android:id="@+id/lnr_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="back"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/img_arrow_left" />
            </LinearLayout>

            <TextView
                style="@style/style_textview"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/addAddress"
                android:textColor="@color/color_service_title" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_hno"
            style="@style/style_edittext"
            android:hint="@string/hno"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_near_location"
            style="@style/style_edittext"
            android:hint="@string/nearestlocation"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_city"
            style="@style/style_edittext"
            android:hint="@string/city"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_state"
            style="@style/style_edittext"
            android:hint="@string/state"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_country"
            style="@style/style_edittext"
            android:hint="@string/Country"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_pincode"
            style="@style/style_edittext"
            android:hint="@string/pincode"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-5dp"
        android:background="@drawable/rectangle_shadow"
        android:elevation="@dimen/_20dp"
        android:gravity="bottom"
        android:minHeight="@dimen/_100dp"
        android:paddingLeft="@dimen/_32dp"
        android:paddingTop="@dimen/_8dp"
        android:paddingRight="@dimen/_32dp"
        android:paddingBottom="@dimen/_8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_20dp"
        app:elevation="@dimen/_15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                style="@style/style_button"
                android:onClick="saveaddress"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:text="@string/saveaddress" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>