<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ChangePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_16dp"
                android:paddingRight="@dimen/_16dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/lnr_back"
                    android:layout_width="wrap_content"
                    android:paddingTop="@dimen/_8dp"
                    android:paddingBottom="@dimen/_8dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/img_arrow_left"
                        />
                </LinearLayout>
                <TextView style="@style/style_textview"
                    android:id="@+id/txt_header"
                    android:text="@string/changepassword"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:textSize="@dimen/_24sp"
                    android:textColor="@color/color_service_title"
                    />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>
        <ImageView
            android:layout_width="@dimen/_220dp"
            android:src="@drawable/img_signup"
            android:contentDescription="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_220dp"/>



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_old_password"
            style="@style/style_edittext"
            android:hint="@string/oldpassword"
            android:inputType="textPassword"


            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_new_password"
            style="@style/style_edittext"
            android:hint="@string/newpassword"
            android:inputType="textPassword"


            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_conf_password"
            style="@style/style_edittext"
            android:hint="@string/conf_password"
            android:inputType="textPassword"


            />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/style_button"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:onClick="send"

            />

    </LinearLayout>

</ScrollView>