<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_220dp"
            android:layout_height="@dimen/_220dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login"
            android:src="@drawable/img_login" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_email"
            style="@style/style_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_password"
            style="@style/style_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/eye_close"/>

        <com.royalit.mfd.customviews.CustomTextView
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:onClick="forgotpass"
            android:padding="@dimen/_8dp"
            android:text="@string/forgotpassword" />

        <LinearLayout
            style="@style/style_button"
            android:gravity="center"
            android:onClick="login">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/style_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:clickable="false"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/login"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:src="@drawable/img_arrow_right" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25dp"
            android:onClick="register">

            <com.royalit.mfd.customviews.CustomTextView
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_0dp"
                android:padding="@dimen/_8dp"
                android:text="@string/donthaveaccount"
                android:textColor="@color/color_edittext"
                android:textSize="@dimen/_16sp" />

            <com.royalit.mfd.customviews.CustomTextView
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_0dp"
                android:padding="@dimen/_0dp"
                android:text="@string/signupnow"
                android:textColor="@color/color_skip"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>