<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_220dp"
            android:layout_height="@dimen/_220dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login"
            android:src="@drawable/img_otp" />

        <com.royalit.mfd.customviews.CustomTextView
            android:id="@+id/txtEmail"
            style="@style/style_textview"
            android:text="@string/otp_header"
            android:textColor="@color/color_skip"
            android:textSize="@dimen/_18sp" />

        <com.royalit.mfd.customviews.CustomTextView
            style="@style/style_textview"
            android:text="@string/otp_has_been"
            android:textSize="@dimen/_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_one"
                style="@style/style_otpedittext" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_two"
                style="@style/style_otpedittext"
                android:layout_width="47dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_three"
                style="@style/style_otpedittext" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_four"
                style="@style/style_otpedittext" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_five"
                style="@style/style_otpedittext" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_six"
                style="@style/style_otpedittext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="didnotreceive">

            <com.royalit.mfd.customviews.CustomTextView
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_0dp"
                android:padding="@dimen/_8dp"
                android:text="@string/donreceive"
                android:textColor="@color/color_edittext"
                android:textSize="@dimen/_16sp" />

            <com.royalit.mfd.customviews.CustomTextView
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_0dp"
                android:padding="@dimen/_0dp"
                android:text="@string/sendagain"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/style_button"
            android:layout_gravity="center"
            android:onClick="otpVerify"
            android:text="@string/verify" />


    </LinearLayout>

</ScrollView>